welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: reassignment to val
def move(pas:Int,avant:Boolean) = { if (avant=true) 
                                             ^